--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,23 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  firebase_core: ^3.6.0
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.9.1
+  camera: ^0.10.5+2
+  google_mlkit_face_detection: ^0.8.0
+  path_provider: ^2.1.1
+  path: ^1.8.3
+  js: ^0.6.7
+  universal_html: ^2.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
